k8s/namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finmfb
